Fix and add backend unit tests
RISDEV-3581