@@ -1,6 +1,7 @@
 package de.bund.digitalservice.ris.caselaw.adapter;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -13,6 +14,7 @@ import de.bund.digitalservice.ris.caselaw.domain.lookuptable.fieldoflaw.Norm;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -20,6 +22,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 @ExtendWith(SpringExtension.class)
@@ -29,83 +33,211 @@ class FieldOfLawServiceTest {
 
   @MockBean FieldOfLawRepository repository;
 
-  //  @Test
-  //  void testGetFieldsOfLaw_withoutQuery_shouldntCallRepository() {
-  //    Pageable pageable = Pageable.unpaged();
-  //    when(repository.findAllByOrderByIdentifierAsc(pageable))
-  //        .thenReturn(new PageImpl<>(List.of(), pageable, 0));
-  //
-  //    var page = service.getFieldsOfLawBySearchQuery(Optional.empty(), pageable);
-  //    assertThat(page.getContent()).isEmpty();
-  //    assertThat(page.isEmpty()).isTrue();
-  //
-  //    verify(repository, times(1)).findAllByOrderByIdentifierAsc(pageable);
-  //  }
-
-  //  @Test
-  //  void testGetFieldsOfLaw_withEmptyQuery_shouldntCallRepository() {
-  //    Pageable pageable = Pageable.unpaged();
-  //    when(repository.findAllByOrderByIdentifierAsc(pageable))
-  //        .thenReturn(new PageImpl<>(List.of(), pageable, 0));
-  //
-  //    var page = service.getFieldsOfLawBySearchQuery(Optional.of(""), pageable);
-  //    assertThat(page.getContent()).isEmpty();
-  //    assertThat(page.isEmpty()).isTrue();
-  //
-  //    verify(repository, times(1)).findAllByOrderByIdentifierAsc(pageable);
-  //  }
-
   @Test
-  void testGetFieldsOfLaw_withEmptyTerms_shouldReturnEmptyList() {
-    List<FieldOfLaw> resultWithNullSearchTerms = repository.findBySearchTerms(null);
-    Assertions.assertEquals(0, resultWithNullSearchTerms.size());
-    List<FieldOfLaw> resultWithEmptySearchTerms = repository.findBySearchTerms(new String[0]);
-    Assertions.assertEquals(0, resultWithEmptySearchTerms.size());
+  void testGetFieldsOfLaw_withoutQuery_shouldNotCallRepository() {
+    Pageable pageable = Pageable.unpaged();
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.empty(), Optional.empty(), Optional.empty(), pageable);
+    assertThat(page.getContent()).isEmpty();
+    assertThat(page.isEmpty()).isTrue();
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
   }
 
-  //  @Test
-  //  void testGetFieldsOfLaw_withQuery_shouldCallRepository() {
-  //    Pageable pageable = PageRequest.of(0, 10);
-  //    String[] searchTerms = new String[] {"test"};
-  //    when(repository.findBySearchTerms(searchTerms)).thenReturn(Collections.emptyList());
-  //
-  //    var page = service.getFieldsOfLawBySearchQuery(Optional.of("test"), pageable);
-  //    assertThat(page.getContent()).isEmpty();
-  //    assertThat(page.isEmpty()).isTrue();
-  //
-  //    verify(repository, times(1)).findBySearchTerms(searchTerms);
-  //    verify(repository, never()).findAllByOrderByIdentifierAsc(pageable);
-  //  }
+  @Test
+  void testGetFieldsOfLaw_withEmptyQuery_shouldNotCallRepository() {
+    Pageable pageable = Pageable.unpaged();
 
-  //  @Test
-  //  void testGetFieldsOfLaw_withMultipleSearchTerms_shouldCallRepository() {
-  //    Pageable pageable = PageRequest.of(0, 10);
-  //    String[] searchTerms = new String[] {"test", "multiple"};
-  //    when(repository.findBySearchTerms(searchTerms)).thenReturn(Collections.emptyList());
-  //
-  //    var page = service.getFieldsOfLawBySearchQuery(Optional.of("test multiple"), pageable);
-  //    assertThat(page.getContent()).isEmpty();
-  //    assertThat(page.isEmpty()).isTrue();
-  //
-  //    verify(repository, times(1)).findBySearchTerms(searchTerms);
-  //    verify(repository, never()).findAllByOrderByIdentifierAsc(pageable);
-  //  }
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.of(""), Optional.of(""), Optional.of(""), pageable);
+    assertThat(page.getContent()).isEmpty();
+    assertThat(page.isEmpty()).isTrue();
 
-  //  @Test
-  //  void
-  //
-  // testGetFieldsOfLaw_withQueryWithWhitespaceAtTheStartAndTheEnd_shouldCallRepositoryWithTrimmedSearchString() {
-  //    Pageable pageable = PageRequest.of(0, 10);
-  //    String[] searchTerms = new String[] {"test"};
-  //    when(repository.findBySearchTerms(searchTerms)).thenReturn(Collections.emptyList());
-  //
-  //    var page = service.getFieldsOfLawBySearchQuery(Optional.of(" test  \t"), pageable);
-  //    assertThat(page.getContent()).isEmpty();
-  //    assertThat(page.isEmpty()).isTrue();
-  //
-  //    verify(repository, times(1)).findBySearchTerms(searchTerms);
-  //    verify(repository, never()).findAllByOrderByIdentifierAsc(pageable);
-  //  }
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withIdentifier_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var identifierString = "foo";
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByIdentifier(identifierString, pageable)).thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.of(identifierString), Optional.empty(), Optional.empty(), pageable);
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+    assertThat(page.isEmpty()).isFalse();
+
+    verify(repository).findByIdentifier(identifierString, pageable);
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withSearchTerm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var searchTerms = new String[] {"foo", "bar"};
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findBySearchTerms(searchTerms)).thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.empty(), Optional.of("foo bar"), Optional.empty(), pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository).findBySearchTerms(searchTerms);
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withNorm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var normString = "foo";
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByNorm(normString)).thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.empty(), Optional.empty(), Optional.of(normString), pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository).findByNorm(normString);
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withIdentifierAndSearchTermAndNorm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var identifierString = "foo";
+    var searchTerms = new String[] {"foo", "bar"};
+    var normString = "bar";
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByIdentifierAndSearchTermsAndNorm(
+            identifierString, searchTerms, normString))
+        .thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.of(identifierString),
+            Optional.of("foo bar"),
+            Optional.of(normString),
+            pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository)
+        .findByIdentifierAndSearchTermsAndNorm(identifierString, searchTerms, normString);
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withIdentifierAndSearchTerm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var identifierString = "foo";
+    var searchTerms = new String[] {"foo", "bar"};
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByIdentifierAndSearchTerms(identifierString, searchTerms))
+        .thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.of(identifierString), Optional.of("foo bar"), Optional.empty(), pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository).findByIdentifierAndSearchTerms(identifierString, searchTerms);
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withIdentifierAndNorm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var identifierString = "foo";
+    var normString = "bar";
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByIdentifierAndNorm(identifierString, normString))
+        .thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.of(identifierString), Optional.empty(), Optional.of(normString), pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository).findByIdentifierAndNorm(identifierString, normString);
+    verify(repository, never()).findByNormAndSearchTerms(any(), any());
+  }
+
+  @Test
+  void testGetFieldsOfLaw_withSearchTermAndNorm_shouldCallRepository() {
+    Pageable pageable = PageRequest.of(0, 10);
+    var searchTerms = new String[] {"foo", "bar"};
+    var normString = "bar";
+    var expectedFieldsOfLaw = List.of(generateFieldOfLaw());
+    when(repository.findByNormAndSearchTerms(normString, searchTerms))
+        .thenReturn(expectedFieldsOfLaw);
+
+    var page =
+        service.getFieldsOfLawBySearchQuery(
+            Optional.empty(), Optional.of("foo bar"), Optional.of(normString), pageable);
+    assertThat(page.isEmpty()).isFalse();
+    assertThat(page.getContent()).isEqualTo(expectedFieldsOfLaw);
+
+    verify(repository, never()).findByIdentifier(any(), any());
+    verify(repository, never()).findBySearchTerms(any());
+    verify(repository, never()).findByNorm(any());
+    verify(repository, never()).findByIdentifierAndSearchTermsAndNorm(any(), any(), any());
+    verify(repository, never()).findByIdentifierAndSearchTerms(any(), any());
+    verify(repository, never()).findByIdentifierAndNorm(any(), any());
+    verify(repository).findByNormAndSearchTerms(normString, searchTerms);
+  }
 
   @Test
   void testGetChildrenOfFieldOfLaw_withNumberIsEmpty_shouldCallRepository() {
@@ -157,33 +289,6 @@ class FieldOfLawServiceTest {
     verify(repository, times(1)).findTreeByIdentifier("test");
   }
 
-  //  @Test
-  //  void testGetFieldsOfLaw_withSearchString() {
-  //    String searchString = "stext";
-  //    String[] searchTerms = new String[] {searchString};
-  //    FieldOfLaw expectedFieldOfLaw =
-  //        FieldOfLaw.builder()
-  //            .id(UUID.randomUUID())
-  //            .hasChildren(false)
-  //            .identifier("TS-01-01")
-  //            .text("stext 2")
-  //            .linkedFields(Collections.emptyList())
-  //            .norms(List.of(new Norm("abbr1", "description")))
-  //            .children(Collections.emptyList())
-  //            .build();
-  //
-  //    Pageable pageable = PageRequest.of(0, 10);
-  //    PageImpl<FieldOfLaw> page = new PageImpl<>(List.of(expectedFieldOfLaw), pageable, 1);
-  //
-  //    when(repository.findBySearchTerms(searchTerms)).thenReturn(List.of(expectedFieldOfLaw));
-  //
-  //    Slice<FieldOfLaw> fieldOfLawPage =
-  //        service.getFieldsOfLawBySearchQuery(Optional.of(searchString), pageable);
-  //    assertThat(fieldOfLawPage).isEqualTo(page);
-  //
-  //    verify(repository).findBySearchTerms(searchTerms);
-  //  }
-
   @Test
   void testGetFieldOfLawChildren() {
     FieldOfLaw expectedFieldOfLaw =
@@ -208,14 +313,15 @@ class FieldOfLawServiceTest {
     verify(repository).findAllByParentIdentifierOrderByIdentifierAsc("TS-01-01");
   }
 
-  //  @Test
-  //  void testSearchAndOrderByScore_pageableOffsetGreaterThanResultListSize() {
-  //    FieldOfLaw databaseFieldOfLaw = FieldOfLaw.builder().build();
-  //
-  //
-  // when(repository.findBySearchTerms(any(String[].class))).thenReturn(List.of(databaseFieldOfLaw));
-  //
-  //    Slice<FieldOfLaw> result = service.searchAndOrderByScore("foo", PageRequest.of(1, 5));
-  //    assertThat(result).isEmpty();
-  //  }
+  FieldOfLaw generateFieldOfLaw() {
+    return FieldOfLaw.builder()
+        .id(UUID.randomUUID())
+        .hasChildren(false)
+        .identifier("TS-01-01")
+        .text("stext 2")
+        .linkedFields(Collections.emptyList())
+        .norms(List.of(new Norm("abbr1", "description")))
+        .children(Collections.emptyList())
+        .build();
+  }
 }
